<resources>
    <string name="app_name">氣象站</string>
    <string name="weather_api_key">CWA-CB81412C-82BF-412B-AF1C-E4E0139F89D2</string>
    <string name="location_loading">地區載入中…</string>
    <string name="temperature_loading">溫度載入中…</string>
    <string name="weather_loading">天氣載入中…</string>
    <string name="high_loading_low_loading">最高: 載入中… 最低: 載入中…</string>
    <string name="granted_permission_title">請同意所有權限</string>
    <string name="granted_permission_message">請同意所有權限，拒絕的話將無法使用完整功能，要繼續嗎?</string>
    <string name="button_continue">繼續</string>
    <string name="button_exit">離開</string>
    <string name="rainfall_loading">降雨機率：載入中</string>
</resources>