<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_loading"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/currentTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationTextView"
        android:layout_marginTop="8dp"
        android:text="@string/temperature_loading"/>

    <TextView
        android:id="@+id/highLowTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentTemperatureTextView"
        android:layout_marginTop="8dp"
        android:text="@string/high_loading_low_loading"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hourWeatherRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highLowTemperatureTextView"
        android:layout_marginTop="16dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tenDaysWeatherRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hourWeatherRecyclerView"
        android:layout_marginTop="16dp"/>

</RelativeLayout>